Removed main logo at smaller breakpoints

--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
                                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navOffcanvas" aria-controls="navOffcanvas">
                                     <span class="navbar-toggler-icon"></span>
                                 </button>
-                                <a class="navbar-brand" :class="theme == 'dark' ? 'text-light' : 'text-dark'" asp-page="/Manage/Index">
+                                <a class="navbar-brand d-none d-md-block" :class="theme == 'dark' ? 'text-light' : 'text-dark'" asp-page="/Manage/Index">
                                     <h4>studypomo</h4>
                                 </a>
                                 <div class="d-flex align-items-center">
