--- a/src/StudyPomo.UI/wwwroot/lib/bootstrap/scss/custom.scss
+++ b/src/StudyPomo.UI/wwwroot/lib/bootstrap/scss/custom.scss
@@ -60,6 +60,10 @@ $color-mode-type: data;
 
 @include color-mode(light) {
 
+    .overdue-color {
+        color: $indigo-500;
+    }
+
     $darken-percentage: 5%;
 
     .nav-link.illuminate {
@@ -209,6 +213,10 @@ $color-mode-type: data;
 
 // Dark mode styles
 @include color-mode(dark) {
+
+    .overdue-color {
+        color: $indigo-200;
+    }
 
     $lighten-percentage: 5%;
 
@@ -387,3 +395,9 @@ a.muted-link {
     text-decoration: none;
     transition: color 0.1s ease-in-out;
 }
+
+$all-colors: map-merge-multiple($blues, $indigos, $purples, $pinks, $reds, $oranges, $yellows, $greens, $teals, $cyans);
+
+$utilities: map-merge( $utilities, ( "color": map-merge( map-get($utilities, "color"), ( values: map-merge( map-get(map-get($utilities, "color"), "values"), ( $all-colors ), ), ), ), ) );
+
+@import "../bootstrap-5.3.2/scss/utilities/api";
