--- a/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
+++ b/src/StudyPomo.UI/Pages/Shared/_Layout.cshtml
@@ -131,8 +131,8 @@
                                             <i class="bi bi-list" style="font-size: 1.2rem"></i>
                                         </div>
                                     }
-                                    <a class="navbar-brand d-none d-md-block" :class="theme == 'dark' ? 'text-light' : 'text-dark'" asp-page="/Manage/Index">
-                                        <h4>studypomo</h4>
+                                    <a class="navbar-brand d-none d-md-block"  asp-page="/Manage/Index">
+                                        <h4 :class="theme == 'dark' ? 'text-light' : 'text-dark'">studypomo</h4>
                                     </a>
                                 </div>
                                 <div class="d-flex align-items-center">
